# ForfeitChatWidget

./: Administrator.cpp  Administrator.h  CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  ForfeitNotice.cpp  ForfeitNotice.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  Server.cpp  Server.h  TeamRepresentative.cpp  TeamRepresentative.h  User.cpp  User.h  chat_widget.html  forfeit_form.html  main.cpp
